# splitbook

./: README.md  pyproject.toml  pyrightconfig.json
splitbook/: __main__.py
splitbook/cli/: __init__.py  help_banner.py  main.py  transcribing_progress.py  waveform_animation.py
splitbook/cli/utils/: strings.py
splitbook/cli/utils/formatting/: __init__.py  formatting.py  test_formatting.py
splitbook/core/: load.py  types.py
splitbook/core/export/: __init__.py  folder.py  id3_tagged_file.py
splitbook/core/generate_timecodes/: __init__.py  generate_timecodes.py  test_generate_timecodes.py
splitbook/core/utils/: audio.py  sanitize_filename.py
splitbook/core/utils/datetime_formatting/: __init__.py  datetime_formatting.py  test_datetime_formatting.py
timecodes_generator/cli/: main.py  transcribing_progress.py
timecodes_generator/cli/utils/formatting/: __init__.py  test_formatting.py
timecodes_generator/core/: generate_timecodes.py  load.py  test_generate_timecodes.py  types.py
timecodes_generator/core/export/: __init__.py  folder.py  id3_tagged_file.py
timecodes_generator/core/generate_timecodes/: __init__.py  generate_timecodes.py  test_generate_timecodes.py
timecodes_generator/core/utils/: datetime_formatting.py  logging.py
