[project]
name = "audio-chapters-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dumb-whisper",
    "eyed3>=0.9.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
]

[tool.uv.sources]
dumb-whisper = { git = "https://github.com/one-with-violets-in-her-lap/dumb-whisper", rev = "bde2f52fa5014d0cf7a38a55b5d077e6cda9595d" }
