[project]
name = "splitbook"
version = "0.1.0"
description = "Audiobook chapter recognition tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dumb-whisper",
    "eyed3>=0.9.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
]

[tool.uv.sources]
dumb-whisper = { git = "https://github.com/one-with-violets-in-her-lap/dumb-whisper", rev = "8df1c94b7f6e8c55fb7685cdf39aae052f3c482a" }
